{
    "name": "GameControls",
    "maps": [
        {
            "name": "MenuControls",
            "id": "8050c5e6-3348-4804-ab66-0d25b24642f7",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "c99e42fd-27e1-4cff-a03c-a600dd2d792d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b95c49a-0c70-4e7e-9562-6c626b30574b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControls",
            "id": "9332fe02-29ff-4d04-b097-3e94be593415",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "84e6be89-668f-42a5-8a19-31f72e6e9152",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2bcaa02d-03d4-48ea-896d-6ef5a3a02dbd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerControls",
            "id": "c4060ed6-6be7-4c07-b6ed-7a1bfc4d2c51",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f5be7a5b-7b23-4b92-9cdf-743510bc610d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e0688468-a3a5-4f12-a8e7-0202e5769b74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "db993517-3e85-4af8-8195-a51668e081ca",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4a8f1484-e2e6-42f7-99d8-964bf4077ae3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "017430d8-5221-4479-bde8-45cfb4c1729e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a2a49ae1-8ea0-45a5-8660-033c941065bb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "72b01427-487c-4fbb-a8b5-0ab1a2e2620f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e9b11eb1-293d-42b3-a4ea-7d5a993e5293",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}